Fix off center post tags

--- a/assets/css/summary.scss
+++ b/assets/css/summary.scss
@@ -5,6 +5,7 @@
     ul {
         text-align: center;
         display: block;
+        padding-left: 0;
 
         li {
             list-style: none;
